# yongnamho_fe

./: .gitignore  app.py  categories.py  crawler.py  database.py  generate_pdf.py  k_enter_news.db  kent_dashboard.py  main.py  news_report.txt  processor.py  pyproject.toml  rag_search.py  report.py  requirements.txt  scheduler.py  schemas.py  styles.py  tts.py  vectorstore.py
Schema_md_file/: news_crawling_guide.md  schema_setting.md
components/: bg.py  dashboard.py  main_page.py  sidebar.py  styles.py
memory/: project_overview.md
pages/: dashboard.py
prompts/: classify.py  report.py  summary.py  tts_script.py
prompts/rag_widgets/: __init__.py  similar_cases_prompt.py  timeline_prompt.py
prompts/report_pdf/: __init__.py  outline.py  report_prompt.py  style_rules.py
prompts/summary/: __init__.py  categories.py  fewshot.py  rules_core.py  rules_left_panel.py  schema.py
